syntax = "proto3";

package proto;

import "block.proto";
import "transaction.proto";

enum ProtoID {
    SyncWorker = 0;  // include transaction handler
    ConsensusWorker = 1;
}

enum MsgType {
    BC_GetBlocksMsg = 0;
    BC_GetInvMsg = 1;
    BC_GetDataMsg = 2;
    BC_OnBlockMsg = 3;
    BC_OnTransactionMsg = 4;
    BC_OnStatusMSg = 5;
}

message GetBlocksMsg {
	uint32 version = 1; 
	repeated string locatorHashes = 2;
	string hashStop = 3;
}

enum InvType {
    block = 0;
    transaction = 1;
}

message StatusMsg {
    uint32 Version = 1;
    uint32 StartHeight = 2;
}


message GetInvMsg {
	InvType   type = 1;
	repeated string hashs = 2;
}

message OnBlockMsg {
    Block block = 1; 
}

message OnTransactionMsg {
    Transaction transaction = 1;
}

message GetDataMsg {
   repeated GetInvMsg InvList = 1;
}